# ccrunch

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  FindGSL.cmake  FindOpenCV.cmake  LICENSE  README.md  config.hpp.in  install.sh  makeShared.sh  makeStatic.sh
CommonLib/: CMakeLists.txt  macro.hpp
CommonLib/Array/: array.hpp  array_circshifting.cpp  array_cropping.cpp  array_element.cpp  array_indexing.cpp  array_linearalgebra.cpp  array_mask.cpp  array_math.cpp  array_mem.cpp  array_padding.cpp  array_permutation.cpp  array_printing.cpp  array_reduction.cpp  array_reduction_ndim.cpp  array_reduction_stl.cpp  array_replacement.cpp  array_shifting.cpp
CommonLib/Basis/: basis.hpp  basis_cartesian.cpp  basis_conversion.cpp  basis_polar.cpp  basis_spherical.cpp  coord_polar.cpp  coord_spherical.cpp
CommonLib/Filter/: filter.hpp  filter_average.cpp  filter_disk.cpp  filter_dog.cpp  filter_gaussian.cpp  filter_laplacian.cpp  filter_log.cpp
CommonLib/MPI/: mpi_xcorr.cpp  mpi_xcorr.hpp
CommonLib/Transform/: transform.hpp  transform_binning.cpp  transform_dilation.cpp  transform_distance.cpp  transform_expand_rotation.cpp  transform_expand_scaling.cpp  transform_helper.cpp  transform_interp.cpp  transform_labeling.cpp  transform_projection.cpp  transform_rotation.cpp  transform_rottrans.cpp  transform_scaling.cpp  transform_tracing.cpp  transform_translation.cpp  transform_watershed.cpp
CommonLib/XCorr/: cCCorr.cpp  cCCorr.hpp  cECorr.cpp  cECorr.hpp  cFFTFilter.cpp  cFFTFilter.hpp  cNCorr.cpp  cNCorr.hpp  cWCorr.cpp  cWCorr.hpp  cXCorr.cpp  cXCorr.hpp  fftSize.hpp  fftw_lock.cpp  fftw_lock.hpp  fftw_wrapper.cpp  fftw_wrapper.hpp  xcorr.hpp  xcorr_direct.cpp  xcorr_ecorr.cpp  xcorr_ecorrm.cpp  xcorr_helper.cpp  xcorr_normxcorr.cpp  xcorr_normxcorrm.cpp  xcorr_normxcorrm_fast.cpp  xcorr_normxcorrmw.cpp  xcorr_pcorr.cpp  xcorr_regnormxcorrm.cpp  xcorr_xcorr.cpp
CommonLibCuda/: CMakeLists.txt  cuMutex.cuh
CommonLibCuda/Array/: array.cuh  array_blas.cu  array_circshifting.cu  array_copying.cu  array_cropping.cu  array_element.cu  array_indexing.cu  array_mask.cu  array_math.cu  array_mem.cu  array_padding.cu  array_permutation.cu  array_random.cu  array_reduction.cu  array_reduction_ndim.cu  array_reduction_thrust.cu  array_replacement.cu  array_shifting.cu
CommonLibCuda/Basis/: basis.cuh  coord_polar.cu  coord_spherical.cu
CommonLibCuda/Registration/: registration.cuh  registration_TPS.cu
CommonLibCuda/Transform/: transform.cuh  transform_expand_rotation.cu  transform_expand_scaling.cu  transform_interp.cu  transform_rotation.cu  transform_rottrans.cu  transform_scaling.cu  transform_translation.cu
CommonLibCuda/XCorr/: cuCCorr.cu  cuCCorr.cuh  cuECorr.cu  cuECorr.cuh  cuFFTFilter.cu  cuFFTFilter.cuh  cuNCorr.cu  cuNCorr.cuh  cuWCorr.cu  cuWCorr.cuh  cuXCorr.cu  cuXCorr.cuh  cufft_wrapper.cu  cufft_wrapper.cuh  xcorr.cuh  xcorr_direct.cu  xcorr_ecorr.cu  xcorr_ecorrm.cu  xcorr_helper.cu  xcorr_normxcorr.cu  xcorr_normxcorrm.cu  xcorr_normxcorrm_fast.cu  xcorr_normxcorrmw.cu  xcorr_pcorr.cu  xcorr_regnormxcorrm.cu  xcorr_xcorr.cu
CommonLibData/: CMakeLists.txt  cThread.hpp  cThreadBoost.hpp  cThreadPool.hpp
CommonLibData/Basis/: cBasis.cpp  cBasis.hpp  cBasisGaussian.cpp  cBasisGaussian.hpp  cBasisHEX.cpp  cBasisHEX.hpp  cBasisHermite.cpp  cBasisHermite.hpp  cBasisPolar.cpp  cBasisPolar.hpp  cBasisSpherical.cpp  cBasisSpherical.hpp
CommonLibData/CUDA/: cuArray3.cpp  cuArray3.hpp  cuBLAS.cpp  cuBLAS.hpp  cuData3.cpp  cuData3.hpp  cuFilterFrequency.cpp  cuFilterFrequency.hpp  cuFilterSpatial.cpp  cuFilterSpatial.hpp  cuRegTPS2.cpp  cuRegTPS2.hpp  cuSystem.cpp  cuSystem.hpp  cuTime.cpp  cuTime.hpp  cuTransSimilarity.cpp  cuTransSimilarity.hpp  cuTransThreshold.cpp  cuTransThreshold.hpp
CommonLibData/Data/: cArray3.cpp  cArray3.hpp  cData3.cpp  cData3.hpp  cData3XCorr.cpp  cData3XCorr.hpp  cFilterFrequency.cpp  cFilterFrequency.hpp  cFilterSpatial.cpp  cFilterSpatial.hpp  cRandom.cpp  cRandom.hpp
CommonLibData/Geometry/: cCoordinate.cpp  cCoordinate.hpp  cNDgrid.cpp  cNDgrid.hpp
CommonLibData/InOut/: cCCP4.cpp  cCCP4.hpp  cESBTL.cpp  cESBTL.hpp  cMRC.cpp  cMRC.hpp  cMapHeader.cpp  cMapHeader.hpp  cPDB.cpp  cPDB.hpp  cTIFF.cpp  cTIFF.hpp  edian.cpp  edian.hpp
CommonLibData/Interface/: cArmadillo.cpp  cArmadillo.hpp  cEigen.cpp  cEigen.hpp  cOpenCV.cpp  cOpenCV.hpp  cPCA.cpp  cPCA.hpp
CommonLibData/Registration/: cRegCorr.cpp  cRegCorr.hpp  cRegTPS2.cpp  cRegTPS2.hpp  cRegTrackPoint2.cpp  cRegTrackPoint2.hpp
CommonLibData/Result/: cResultAligner.cpp  cResultAligner.hpp  cResultFitter.cpp  cResultFitter.hpp  cResultPicker.cpp  cResultPicker.hpp
CommonLibData/Stack/: cStackRegTPS2.cpp  cStackRegTPS2.hpp  cStackRegTrans.cpp  cStackRegTrans.hpp
CommonLibData/Structure/: cMatrix33.cpp  cMatrix33.hpp  cOrientation.cpp  cOrientation.hpp  cPolygon.cpp  cPolygon.hpp  cSegment3.cpp  cSegment3.hpp  cSetPoint3.cpp  cSetPoint3.hpp  cVector3.cpp  cVector3.hpp  pft_vertices.cpp  pft_vertices.hpp
CommonLibData/System/: cFileSystem.cpp  cFileSystem.hpp  cString.cpp  cString.hpp  cSystem.cpp  cSystem.hpp  cTime.cpp  cTime.hpp
CommonLibData/Transform/: cTransDistance.cpp  cTransDistance.hpp  cTransMorpho.cpp  cTransMorpho.hpp  cTransProjection.cpp  cTransProjection.hpp  cTransSimilarity.cpp  cTransSimilarity.hpp  cTransThreshold.cpp  cTransThreshold.hpp
programs/: CMakeLists.txt  infoCUDA.c
programs/gEMaligner/: CMakeLists.txt  cAligner.hpp  cAlignerArg.cpp  cAlignerCurtain.cpp  cAlignerElastic.cpp  cAlignerMem.cpp  cAlignerRigid.cpp  main.cpp
programs/gEMcrystal/: CMakeLists.txt  cData3Qt.cpp  cData3Qt.h  ellipse.cpp  ellipse.h  functions.cpp  loader.cpp  loader.h  main.cpp  main.pro  main_view.cpp  main_view.h  main_window.cpp  main_window.h  mask.cpp  micrograph.cpp  micrograph.h  output_text_edit.cpp  output_text_edit.h  particle_label.cpp  particle_label.h  picker.cpp  picker.h  point.cpp  point.h  result.cpp  result.h  result_extra.cpp  scene.cpp  scene.h  test.cpp
programs/gEMfitter/: CMakeLists.txt  cFitter.hpp  cFitterArg.cpp  cFitterMem.cpp  (+5 more)
(+33 files in other folders)
